--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1339,4 +1339,4 @@ img.vert-move {
 }
 @keyframes mover {
   0% { transform: translateY(0); }
-  100% { transform: translateY(-20px); }
+  100% { transform: translateY(-20px); }}
